Revert "fixed spacing in the submit"
This reverts commit 4b5349c308fa4c6a011972395229ab35249cb653.

--- a/restrucured/assets/css/homePage/Footer-Clean.css
+++ b/restrucured/assets/css/homePage/Footer-Clean.css
@@ -14,7 +14,6 @@
 .footer-clean ul {
     padding: 0;
     list-style: none;
-    text-decoration: none;
     line-height: 1.6;
     font-size: 14px;
     margin-bottom: 0;
